app/spa/src/style.scss
//
//
// SASS VARIABLES & DECLARATIONS
// 
//
$primaryColor: maroon;
$blackColor: black;
$silverColor: silver;
$greyColor: grey;
$greyDarkText: #696969;

$headerHeight: 58px;
$margin: 8px;
$lightboxMargin: ($margin * 2);
$navWidth: 160px;
$lightboxButtonSize: 40px;
$lightboxInfoWidth: 320px;

//
//
// RESETS
// 
//
* {
  font-family: 'Comic Mono';
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
}

a {
  color: $blackColor;
  text-decoration: none;

  &:hover, &:active, &:visited {
    color: $blackColor;
    text-decoration: none;
  }
  &:hover {
    font-weight: bold;
  }
}

//
//
// STRUCTURE / LAYOUT
// 
//
#header {
  padding: $margin;
  padding-top: ($margin * 1.5);

  #top-right-links {
    float: right;
    position: relative;
  }
}

#content-container {
  position: absolute;
  top: $headerHeight + $margin;
  left: $margin;
  right: $margin;
  bottom: $margin;

  #results-space {
    position: absolute;
    right: 0px;
    left: 0px;
    bottom: 0px;
    top: 0px;
    display: flex;
    flex-direction: column;
    gap: $margin;
    overflow: auto;
  }
}

#admin-page {
  display: flex;
  background-color: beige;
  #admin-side-menu {
    padding-right: $margin;

    flex: 0 0 auto;
    background-color: green;
  }

  #admin-tab-content {
    flex: 1;
    background-color: orange;
  }

  #admin-dropdown-menu.is-mobile {
    h2 {
      text-decoration: underline;

      &::after {
        content: ' v';
      }
    }
  }
}

#scroll-to-top-button {
  position: absolute;
  bottom: $margin * 3;
  right: $margin * 3;
  z-index: 100;
  display: block;
  background-color: #fff;
  border-radius: $margin;
}

#map-results-container {
  height: 1vh;
	width: 100%;
	display: flex;
  flex: auto;
	// overflow-y: auto; // set this to auto to re-instate results container specific scroll and not page wide

	margin: 0 auto;
	// justify-content: center;

	#map-container {
    flex: 1;
    height: 100%;
    display: flex;
    // background: blue;

		// #map-container {
		// 	height: 100%;
		// 	width: 100%;
		// 	// padding: 0 0 $spacing $spacing;
    //   background: red;
		// }
	}

	#results-container {
		vertical-align: top;
    // background: green;
    // padding-left: $margin;

		// padding: 0 ($spacing - $gridSpacing / 2) $spacing ($spacing - $gridSpacing / 2);
	}

	&.map-mode-enabled {
		overflow-y: auto;
		max-width: 100%;

		#map-results-wrapper {
			width: 100%;
			max-width: 100%;
		}

	}
}

//
//
// COMPONENTS
// 
//
#brand {
  font-size: xx-large;
  color: $primaryColor;
  & a, & a:hover, & a:active, & a:visited {
    color: $primaryColor;
  }
}


#search-tabs-and-search-bar {
}

#search-bar {
  display: flex;
  gap: $margin;
  flex: none;
  margin-top: $margin;

  #search-input {
    flex: 1;
    // todo: on mobile, no right padding (search mode toggle)
    .individual-query {
      display: inline-flex;
      border: 1px solid $silverColor;
      border-radius: $margin;
      padding: 3px 6px 3px 4px;
      margin: 4px;

      color: $greyDarkText;
      cursor: default;
      
      .img-loader-space {
        height: 20px;
        width: 20px; 
        display: flex;
        align-items: center;   
        margin-right: 4px; 
      }

      .query-display-text {
        margin-left: calc($margin / 2);
      }

      img {
        height: 20px;
        width: 20px;

        border-radius: 6px; 
      }

      &:hover {
        border-color: $greyColor;
      }

      align-items: center;

      &.not-query {
        text-decoration: line-through;
      }

      .remove-query {
        display: flex;
        svg {
          stroke: $silverColor;
        }

        &:hover svg {
          stroke: $primaryColor;
        }
      }
    }

		#typeahead-form-wrapper {
      display: inline-flex;
      vertical-align: top;
      height: 36px;
      align-items: center;
    }

    #typeahead-search-input {
      width: 250px;
      margin-left: $margin;
    }

    #query-input-and-close-button {
      display: flex;
    }

    #queries-and-input {
      flex: 1;
      cursor: text;
    }

    #clear-button-space {
      flex: 0 0 auto;
      display: flex;
      align-items: center;
      padding-right: $margin;
      padding-left: $margin;
      
      & svg {
        display: flex;
        align-items: center;
        stroke: $greyColor
      }

      &:hover svg {
        stroke: $primaryColor;
      }
    }

    // #query-input {
    //   display: inline-block;
    //   border: 1px solid $primaryColor;
    //   padding: 4px;
    //   margin: 4px;
    //   background: #fff;
    // }

    .auto-complete-item-image {
      border-radius: $margin;
    }

    #reset-query-button {
      float: right;
    }

    #refresh-query-button {
      float: right;
    }
  }

  // todo: on mobile, hide this
  #search-mode-toggle {
    flex: 0 0 auto;

    .search-mode-toggle-option {
      display: inline-block;
      height: 100%;
      background-color: teal;
      margin-left: $margin;
      // todo: make content vertically centered, test with text and icon.

      &.activeLink {
        background-color: maroon;
      }
    }
  }
}

.results-overview {
  display: flex;
  margin-bottom: $margin;
  padding-left: $margin;

  .results-overview-column {
    flex-grow: 1;
  }
}

#sort-select {
  float: right;

  .sort-capitalised {
    text-transform: capitalize;
  }

  // todo: obsolete now?
  ul {
    list-style: none;
    padding-left: 0;

    li {
      display: inline-block;
      margin-right: 8px;

      &:last {
        margin-right: 0px;
      }
    }
  }
}

#tiled-gallery {
  img {
    margin-left: 8px;
    margin-bottom: 8px;
    float: left;
    border-radius: $margin;
  }
}

#justified-gallery {
	.justified-row {
		margin-bottom: 8px;
		white-space: nowrap;
	}

	.justified-row img {
		width: auto;
		max-height: 100%;
		margin-right: $margin;
    border-radius: $margin;
	}

	.justified-row img:last-child {
		margin-right: 0px;
	}
}

#lightbox {
  z-index: 200;
  position: fixed;
  display: none;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: #fff;
  // background: yellowgreen;

  &.open {
    display: block
  }

  #video-wrapper {
    // background-color: mediumpurple;
    // leave space for the video controls
    height: calc(100% - 40px - $lightboxMargin);
    position: relative;
  }

  #video-control-space {
    // background-color: palevioletred;
    position: absolute;
    display: none;
    left: 0;
    right: 0;
    bottom: 0;
    height: 40px;

    &.open {
      display: block
    }
  }

  #lightbox-file-content {
    position: absolute;
    left: $lightboxMargin;
    right: 40px + ($lightboxMargin * 2);
    top: $lightboxMargin;
    bottom: $lightboxMargin;

    // background-color: orange;
    overflow-y: auto;

    &.with-info {
      right: $lightboxInfoWidth + ($lightboxMargin * 3) + $lightboxButtonSize;
    }

    img {
      width: auto;
      max-width: 100%;
      height: auto;
      max-height: 100%;
      max-height: calc(100vh - ($lightboxMargin * 2));
      margin: auto;
      display: block;
      left: 0;
      right: 0;
      opacity: 1;
    }

    #lightbox-video {
      height: 100%;
    }
    
    #info-underneath {
      // background-color: lightseagreen;
    }

    /*
    need this next block to ensure and enforce that videos will be scaled to 
    max 100% height / verticality. along with the style object on the video 
    element in the `VideoJS` component.
    */
    [data-vjs-player="true"] {
      position: static !important;
    }
  }

  #lightbox-file-info {
    position: absolute;
    right: $lightboxButtonSize + (2 * $lightboxMargin);
    top: $lightboxMargin;
    bottom: $lightboxMargin;
    width: 0px;
    overflow: hidden;
    overflow-y: auto;
    // background-color: aqua;

    &.with-info {
      width: $lightboxInfoWidth;
    }

    .lightbox-information-piece {
      margin-bottom: $margin;

      svg {
        margin-right: $margin;
      }
    }
  }

 #lightbox-file-info, #info-underneath {

  .colour-swatch {
    height: 16px;
    width: 16px;
    display: inline-block;
    border-radius: calc($margin / 2);
    margin-right: $margin;
  }

  .lightbox-tag-group {
    margin-bottom: $margin;
    // background-color: burlywood;

    .lightbox-tag {
      display: inline;
      // background-color: mediumorchid;
      align-items: center;
      display: inline-flex;
      margin-right: $margin;
      margin-bottom: calc($margin / 2);
      text-transform: none;
      border: 1px solid silver;
      border-radius: calc($margin / 2);
      padding: calc($margin / 2);
      cursor: pointer;
      font-size: smaller;

      svg {
        margin-right: calc($margin / 2);
        display: block;
      }
    }
  }
 }


 .lightbox-button {
  width: $lightboxButtonSize;
  height: $lightboxButtonSize;

  &.right-side {
    position: absolute;
    right: $lightboxMargin;
  }
}

  #lightbox-close {
    top: $lightboxMargin;
  }

  #lightbox-info {
    top: $lightboxButtonSize + ($lightboxMargin * 2);
  }
  
  #lightbox-left {
    bottom: $lightboxButtonSize + ($lightboxMargin * 2);
  }

  #lightbox-right {
    bottom: $lightboxMargin;
  }
}

#query-builder-tabs {

  .button-to-add-query-container {
    float: right;
  }

  #elevation-query-builder {
    width: 80%;
    margin: 0 auto;
    padding-top: 40px;

    #elevation-range-inputs {
      display: flex;
      gap: 16px;
      margin-top: $margin * 2;
      margin-bottom: $margin * 3;

      .elevation-bound-input {
        flex-grow: 1;
      }
    }
  }

  #folder-query-builder {

    #folder-summary-list {
      margin-bottom: $margin;
      overflow-y: auto;
      max-height: 50vh;
    
      .folder-summary {
        display: flex;
        margin-bottom: $margin;
        cursor: pointer;

        &:last-of-type {
          margin-bottom: 0;
        }
        
        .image-part {
          width: 70px;

          .folder-summary-image {
            width: 100%;
          }
        }
        .summary-part {
          flex: 1;
          padding-left: $margin;
        }
      }
    }
  }
}

//
//
// SMALL HELPERS / GENERIC STYLES / DETAILS
// 
//

